--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: tt-dashboard
+    name: TT-dashboard
     env: docker
     plan: free
-    dockerfilePath: Dockerfile
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         value: 80
